# vulkan-minimal-rtx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
render-data/: sponza.fixed.cols.mtl
render-data/San_Miguel_casual-effects/: .gitattributes  san-miguel-scale50.mtl
render-data/sibenik/: sibenik.mtl
render-data/sponza/: .gitattributes  avgs  background.png.avg  chain_texture.png.avg  insert-avg-tex-color.sh  lion.png.avg  spnza_bricks_a_diff.png.avg  sponza.fixed.cols.mtl  sponza.fixed.mtl  sponza.ocean.mtl  sponza_arch_diff.png.avg  sponza_ceiling_a_diff.png.avg  sponza_column_a_diff.png.avg  sponza_column_b_diff.png.avg  sponza_column_c_diff.png.avg  sponza_curtain_blue_diff.png.avg  sponza_curtain_diff.png.avg  sponza_curtain_green_diff.png.avg  sponza_details_diff.png.avg  sponza_fabric_blue_diff.png.avg  sponza_fabric_diff.png.avg  sponza_fabric_green_diff.png.avg  sponza_flagpole_diff.png.avg  sponza_floor_a_diff.png.avg  sponza_roof_diff.png.avg  sponza_thorn_diff.png.avg  vase_dif.png.avg  vase_hanging.png.avg  vase_plant.png.avg  vase_round.png.avg
shaders/: closestHit.h  raytrace.comp.glsl  raytrace.comp.glsl.spv  raytrace.rchit  raytrace.rgen  raytrace.rgen.glsl  raytrace.rgen.glsl.spv  raytrace.rmiss  shaderCommon.h
src/: VulkanHelpers.cpp  VulkanHelpers.h  common.h  main.cpp
